# openenv_clinical_trials

./: .dockerignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
clinical_trial_matcher/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
clinical_trial_matcher/server/: Dockerfile  __init__.py  app.py  clinical_trial_matcher_environment.py
env/: __init__.py  env.py  grader.py  models.py
env/data/: ground_truth.json  task1_data.json  task2_data.json  task3_data.json
server/: __init__.py  api_models.py  app.py  clinical_trial_environment.py
tests/: __init__.py  test_env.py  test_grader.py
